# memory-mgr

./: .clang-format  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  3rdPartyLibs.Win32.props  3rdPartyLibs.x64.props  CMakeLists.txt  ChangeLog  Doxyfile  Makefile.am  Managers.sln  NEWS  Readme.md  TODO  bootstrap.py  change log.txt  conanfile.py  configure  configure.in  critical_section.h  doxydoc_footer.html  doxygen.css  environment.yml  generic STL VS2008.sln  genericSTL.sln  locks.h  memory-mgr VS2005.sln  memory-mgr VS2008.sln  memory-mgr.sln  memory_mgr.kdevelop  memory_mgr.kdevelop.pcs  memory_mgr.kdevses  singleton.h  vector
code/: CMakeLists.txt
code/gstl/: CMakeLists.txt
code/gstl/include/gstl/: algorithm  allocator  concepts.hpp  deque  functional  hash.hpp  iterator  list  map  memory  pointer_traits  priority_queue  queue  stack  string  string_serialization.hpp  utility  vector
code/gstl/tests/: CMakeLists.txt  instantiations.cpp
code/gstl/tests/instantiations/: CMakeLists.txt  instantiations.cpp
code/gstl/tests/unit_tests/: CMakeLists.txt  managers.hpp  operations_tracer.hpp  test_algorithm.cpp  test_allocator.cpp  test_basic_string.cpp  test_boost_range.cpp  test_char_traits.cpp  test_class.cpp  test_class.hpp  test_common.hpp  test_deque.cpp  test_dynamic_buffer.cpp  test_iterator.cpp  test_list.cpp  test_named_allocator.cpp  test_pointer_traits.cpp  test_queue.cpp  test_stack.cpp  test_utilities.cpp  test_vector.cpp  unit_tests.cpp
code/memory-mgr/: CMakeLists.txt
code/memory-mgr/examples/: CMakeLists.txt  examples.vcxproj  examples.vcxproj.filters  main.cpp  test_offset_ptr_optimizer_bug.cpp
code/memory-mgr/include/memory-mgr/: _segment_manager.h  allocator.h  allocator_decorator.h  get_pointer.h  heap_segment.h  low_fragmentation_manager.h  managed_base.h  manager_category.h  manager_traits.h  memory-mgr.vcxproj.filters  memory_debug.h  memory_header.h  memory_manager.h  memory_segment.h  memory_usage_tracker.h  named_objects.h  new.h  offset_allocator.h  offset_pointer.h  offset_ptr.h  params_binder.h  pointer_cast.h  polymorphic_allocator.h  segment_traits.h  shared_segment.h  singleton_manager.h  size_tracking.h
code/memory-mgr/tests/: CMakeLists.txt
code/memory-mgr/tests/instantiations/: CMakeLists.txt  instantiations.cpp
code/memory-mgr/tests/performance_tests/: CMakeLists.txt  perf_tests.cpp  perf_tests.vcxproj.filters  perf_timer.h  stdafx.h  test_boost_interprocess.cpp  test_boost_serialization.cpp  (+7 more)
code/templates/: h
include/memory-mgr/detail/: Makefile.am  allocator_base.h  assert.h  aux_data_decorator.h  bit_manager.h  compatibility_types.h  decorator_base.h  dynamic_cast_ex.h  helpers.h  lfm_pool_id_helpers.h  malloc_allocator.h  math.h  member_allocator_impl.h  mgr_impl_allocator.h  named_allocator.h  new_helpers.h  new_proxy_operator_braces.h  new_proxy_operator_pp.h  offset_ptr_base.h  offset_traits.h  polymorphic_allocator.h  ptr_casts.h  ptr_helpers.h  segment_storage_base.h  segment_storage_map.h  segment_storage_vector.h  singleton.h  singleton_allocator_impl.h  static_assert.h  static_bitset.h  temp_buffer.h  type_manip.h  types.h  vector_as_allocator.h  virtualmem_allocator.h
perf_tests/: Makefile.am  PerfTests.cpp  managers.h  perf_tests.cpp  perf_tests.vcxproj  perf_tests_VS2005.vcproj  perf_tests_VS2008.vcproj  perf_timer.h  stdafx.h  test_bit_manager.cpp  test_boost_interprocess.cpp  test_boost_serialization.cpp  test_managed_base.cpp  test_memory_manager.cpp  test_multithreaded.cpp  test_offset_pointer.cpp  test_pointer_convert.cpp  test_pool.cpp  test_size_tracking.cpp  test_static_bitset.cpp  test_templates.h
perf_tests/detail/: Makefile.am  perf_timer.h  posix_perf_timer.cpp  posix_perf_timer.h  test.cpp  test.h  test_mt.h  win_perf_timer.cpp  win_perf_timer.h
tests/unit_tests/: CMakeLists.txt  Makefile.am  common_manager_tests.h  detect_memory_leaks.cpp  managers.h  operations_tracer.hpp  stdafx.cpp  stdafx.h  test_allocator.cpp  test_bit_manager.cpp  test_class.cpp  test_class.h  test_class.hpp  test_deque.cpp  test_intrusive_ptr.cpp  test_low_fragmentation_manager.cpp  test_managed_base.cpp  test_math.cpp  test_memory_manager.cpp  test_memory_segment.cpp  test_named_allocator.cpp  test_named_objects.cpp  test_new.cpp  test_offset_pointer.cpp  test_pointer_traits.cpp  test_pool.cpp  test_segment_manager.cpp  test_shared_ptr.cpp  test_shared_segment.cpp  test_size_tracking.cpp  test_static_bitset.cpp  test_temp_buffer.cpp  test_type_manip.cpp  test_utilities.cpp  unit_tests.cpp
tests/unit_tests/detail/: test_compare_operators.hpp  test_construction.hpp  test_empty.hpp  test_front.hpp  test_iterator.hpp  test_resize_reserve_throw.hpp  test_wrapper_compare_operators.hpp
tests/unit_tests/pool/: test_pool_alloc.cpp  time_pool_alloc.cpp
unit_tests/: CMakeLists.txt  Makefile.am  common_manager_tests.h  detect_memory_leaks.cpp  detect_memory_leaks.h  managers.h  managers.hpp  operations_tracer.hpp  stdafx.cpp  stdafx.h  test_algorithm.cpp  test_allocator.cpp  test_basic_string.cpp  test_bit_manager.cpp  test_boost_range.cpp  test_case.cpp  test_case.h  test_case.hpp  test_char_traits.cpp  test_class.cpp  test_class.h  test_class.hpp  test_common.hpp  test_deque.cpp  test_dynamic_sequence.cpp  test_intrusive_ptr.cpp  test_iterator.cpp  test_list.cpp  test_low_fragmentation_manager.cpp  test_managed_base.cpp  test_math.cpp  test_memory_manager.cpp  test_memory_segment.cpp  test_named_objects.cpp  test_new.cpp  test_offset_pointer.cpp  test_pointer_convert.cpp  test_pointer_traits.cpp  test_pool.cpp  test_queue.cpp  (+19 more)
unit_tests/detail/: test_access_operators.hpp  test_assign_operator.hpp  test_assign_throw.hpp  test_begin_end.hpp  test_clear.hpp  test_compare_operators.hpp  test_construction.hpp  test_construction_throw.hpp  test_empty.hpp  test_erase_iter.hpp  test_erase_range.hpp  test_iterator.hpp  test_reserve.hpp  test_resize.hpp  test_resize_reserve_throw.hpp  test_swap.hpp  test_wrapper_construction.hpp
unit_tests/pool/: sys_allocator.hpp  test_pool_alloc.cpp  time_pool_alloc.cpp
(+938 files in other folders)
