AC_INIT(configure.in)

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(memory_mgr, 0.8.0)

AC_LANG_CPLUSPLUS
AC_PROG_CXX
AM_PROG_LIBTOOL

AC_OUTPUT(Makefile unit_tests/Makefile memory-mgr/Makefile memory-mgr/detail/Makefile memory-mgr/config/Makefile memory-mgr/config/platform/Makefile perf_tests/Makefile perf_tests/detail/Makefile memory-mgr/sync/Makefile)
