




INCLUDES = -I$(top_srcdir)/.
include_HEADERS = allocator_base.h bit_manager.h cmp_helper.h decorator_base.h\
	helpers.h malloc_allocator.h math.h member_allocator_impl.h\
	named_allocator.h offset_traits.h pointer_traits.h ptr_helpers.h\
	scoped_ptr.h segment_storage_base.h segment_storage_map.h\
	segment_storage_vector.h singleton_allocator_impl.h singleton.h\
	static_assert.h static_bitset.h temp_buffer.h type_manip.h types.h\
	vector_as_allocator.h
